# This is the help level Makefile for gramps
# $Id$

include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook

DOC_MODULE = gramps-manual
DOC_ENTITIES = \
	gramps-manual.xml

DOC_FIGURES = \
	figures/bookreport.png\
	figures/cfe-ar.png\
	figures/cfe-df.png\
	figures/child-ref.png\
	figures/column-editor.png\
	figures/comp-people.png\
	figures/date-selection.png\
	figures/edit-ad.png\
	figures/edit-an.png\
	figures/edit-at.png\
	figures/edit-bm.png\
	figures/edit-ev.png\
	figures/edit-ev-ref.png\
	figures/edit-family.png\
	figures/edit-media.png\
	figures/edit-person-addresses.png\
	figures/edit-person-assoc.png\
	figures/edit-person-attributes.png\
	figures/edit-person-events.png\
	figures/edit-person-gallery.png\
	figures/edit-person-internet.png\
	figures/edit-person-lds.png\
	figures/edit-person-names.png\
	figures/edit-person-notes.png\
	figures/edit-person.png\
	figures/edit-person-sources.png\
	figures/edit-plc.png\
	figures/edit-rel.png\
	figures/edit-si.png\
	figures/edit-src.png\
	figures/edit-wi.png\
	figures/events.png\
	figures/export-druid.png\
	figures/family-alt.png\
	figures/family-list.png\
	figures/family.png\
	figures/family-warn.png\
	figures/find-people.png\
	figures/first-open.png\
	figures/gedcom-export.png\
	figures/gedcom-export-progress.png\
	figures/gedcom-import.png\
	figures/mainwin.png\
	figures/media.png\
	figures/merge-people.png\
	figures/merge-plc.png\
	figures/merge-src.png\
	figures/missing-media.png\
	figures/noside-nofilt.png\
	figures/pedigree-anchor.png\
	figures/pedigree-child-cut.png\
	figures/pedigree.png\
	figures/pedigree-siblings-cut.png\
	figures/places.png\
	figures/prefs.png\
	figures/repository.png\
	figures/researcher.png\
	figures/scratch-pad.png\
	figures/select-family.png\
	figures/select-person.png\
	figures/side-filt.png\
	figures/sources.png

DOC_LINGUAS = 
#de fr hu ru
